# Caton_IMS

./: Cargo.toml  desktop.ini  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
backup_files/: MedicineManager.tsx
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .env  2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/src/: .env  cmd.rs  commands.rs  database.rs  db.rs  lib.rs  main.rs  model.rs  session.rs  try.js  user.rs  utils.rs
src-tauri/src/data/: init.js
src/components/: Announcement.tsx  Appointment.tsx  Billing.tsx  BillingParent.tsx  BillingSummary.tsx  CommingSoon.tsx  Dashboard.tsx  History.tsx  Inventory.tsx  Login.tsx  MedicineManager.tsx  Navbar.tsx  PatientPopup.tsx  Patients.tsx  Profile.tsx  ProfilePage.tsx  Protectroute.tsx  SignupPage.tsx  StockAdd.tsx  StockManager.tsx  StockUpdate.tsx  WelcomePage.tsx  chartConfig.ts  salesdata.json  stocks.json
src/components/animations/: Push.json  comingsoon.json  loader.json
src/components/ui/: sonner.tsx  subscription.tsx
src/constants/: Doctor.json
src/containers/: Profile.tsx
src/context/: AuthContext.tsx
src/hooks/: printBill.ts  searchMedicines.ts  updateStock.ts  useInitializeDatabase.ts.ts
src/lib/: db.ts  doctordb.ts  doctorstock.ts  stockdb.ts
src/utils/: indexedDB.ts  indexedDb.ts
