[package]
name = "caton"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "caton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2.0.0-rc"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.11"
mysql = "23.0.0"  # or the latest version available
mongodb = { version = "2.5", features = ["tokio-runtime"] }
futures = "0.3"
regex = "1"
rand = "0.8"

# lettre = { version = "0.10.4", features = ["builder", "smtp-transport"] }
reqwest = { version = "0.11", features = ["json"] }
lettre = "0.10.0-alpha.4"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "unwind"
debug = true
